# bevy_2d_grid

./: CLAUDE.md  Cargo.toml  README.md
examples/: render_layers.rs  simple.rs  simple_2d.rs
src/: grid.wgsl  grid_2d.wgsl  lib.rs  render.rs
