[package]
name = "bevy_2d_grid"
version = "0.0.1"
authors = [
  "David Illing <dilling123@gmail.com>",
]
edition = "2021"
description = "A 2D infinite grid for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dilling/bevy_2d_grid"
documentation = "https://docs.rs/bevy_2d_grid"
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_asset",
  "bevy_image",
  "bevy_log",
] }

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_winit",
  "bevy_window",
  "bevy_sprite",
  "x11",
  "tonemapping_luts",
  "ktx2",
  "zstd",
] }
